--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -16,4 +16,4 @@ RUN npm config set registry https://registry.npm.taobao.org
 
 RUN npm install
 RUN npm run build
-CMD ["cnpm", "start"]
+CMD ["npm", "start"]
