--- a/project/Dockerfile
+++ b/project/Dockerfile
@@ -12,4 +12,12 @@ RUN npm config set registry https://registry.npm.taobao.org
 
 RUN npm install
 RUN npm run build
+
+# 配置环境变量
+ ENV HOST 0.0.0.0
+ ENV PORT 9080
+ 
+ # 容器对外暴露的端口号
+ EXPOSE 9080
+
 CMD ["npm", "start"]
